<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/dimen_10dp"
        app:cardElevation="@dimen/dimen_0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_help"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/dimen_text_17sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/dimen_145dp"
                android:layout_height="@dimen/dimen_133dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:src="@drawable/user_testing" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/label_help_desc"
                android:textAlignment="center"
                android:textSize="@dimen/dimen_text_14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOkHelp"
                android:layout_width="@dimen/dimen_255dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:backgroundTint="@color/colorButton"
                android:text="@string/label_ok"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_text_18sp"
                app:cornerRadius="@dimen/dimen_20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>