<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="@dimen/dimen_300dp"
        android:src="@drawable/logo_ais"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_60dp"
        android:layout_marginRight="@dimen/dimen_60dp"
        android:layout_marginBottom="@dimen/dimen_15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/container_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:src="@drawable/ic_user" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                style="@style/AisMhsTextInputLayout"
                android:hint="@string/hint_nim">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    style="@style/AisMhsTextInputEditText"
                    android:imeOptions="actionNext"
                    android:inputType="numberSigned"
                    android:maxLength="14" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/container_id">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:src="@drawable/ic_lock" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/AisMhsTextInputLayout"
                android:hint="@string/hint_pass"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorTextLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    style="@style/AisMhsTextInputEditText"
                    android:backgroundTint="@color/colorTextLogin"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RadioButton
            android:id="@+id/radioLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorTextLogin"
            app:layout_constraintBottom_toBottomOf="@id/tvKeepLogin"
            app:layout_constraintRight_toLeftOf="@id/tvKeepLogin"
            app:layout_constraintTop_toTopOf="@id/tvKeepLogin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvKeepLogin"
            style="@style/AisMhsTextView.Medium.Login"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/label_keep_login"
            android:textSize="@dimen/dimen_text_18sp"
            app:layout_constraintLeft_toLeftOf="@id/btnLogin"
            app:layout_constraintRight_toRightOf="@id/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/container_password" />

        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginTop="@dimen/dimen_1dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/dimen_5dp"
            android:src="@drawable/ic_question"
            app:layout_constraintLeft_toRightOf="@id/tvKeepLogin"
            app:layout_constraintTop_toBottomOf="@id/container_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/AisMhsButtonLogin"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/label_log_in"
            android:textSize="@dimen/dimen_text_18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvKeepLogin" />

        <!--        <com.google.android.material.button.MaterialButton-->
        <!--            android:id="@+id/tvForgetPassword"-->
        <!--            style="@style/AisMhsTextButtonLogin"-->
        <!--            android:text="@string/label_forgot_password"-->
        <!--            app:layout_constraintLeft_toLeftOf="@id/btnLogin"-->
        <!--            app:layout_constraintRight_toRightOf="@id/btnLogin"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/btnLogin" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>