<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTeal"
        app:contentInsetStartWithNavigation="@dimen/dimen_0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/label_lecture"
        app:titleTextColor="@color/colorWhite" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayoutAppBar"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_marginBottom="@dimen/dimen_56dp"
        android:background="@color/colorTeal"
        app:layout_constraintBottom_toBottomOf="@id/coordinatorLayoutBottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbarMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTeal">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorTeal"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_18dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvWelcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/applesf_rounded"
                        android:text="@string/label_welcome"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/dimen_text_18sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:fontFamily="@font/applesf_rounded"
                        android:text="@string/sample_name"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/dimen_text_18sp"
                        app:layout_constraintEnd_toStartOf="@id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvNim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:fontFamily="@font/applesf_rounded"
                        android:text="@string/sample_nim"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/dimen_text_16sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvName" />

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/ivUser"
                        android:layout_width="@dimen/dimen_78dp"
                        android:layout_height="@dimen/dimen_78dp"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:src="@drawable/ic_account_circle_white"
                        app:civ_circle_color="@color/colorTeal"
                        app:layout_constraintBottom_toTopOf="@id/tvNim"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tvWelcome" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="274dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_rounded_top_white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTransparent"
        android:backgroundTint="@color/colorTransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bap_main"
            style="@style/AisMhsBottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabAlignmentMode="center" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorTransparent"
            android:backgroundTint="@color/colorTransparent"
            android:outlineSpotShadowColor="@color/colorTransparent"
            app:elevation="@dimen/dimen_5dp"
            app:itemIconTint="@color/bottom_nav_item_color"
            app:itemTextAppearanceActive="@style/BottomNavigationView.Active"
            app:itemTextAppearanceInactive="@style/BottomNavigationView"
            app:itemTextColor="@color/bottom_nav_item_color"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/menu_bottom_nav"
            tools:targetApi="p" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>